# ProjectMessagingApplication

./: .gitignore
cpp/designs/: MessageTypes.xcf  header.xcf  read_write_locks.txt  server.xcf
cpp/src/client/: Client.cpp
cpp/src/server/: MessagingClient.hpp  Server.hpp  SharedClients.cpp
cpp/src/shared/: CryptoLayer.cpp  CryptoLayerTests.cpp  MessageLayer.hpp
designs/: MessageLayer.xcf  header_ascii.txt
rust/message_layer/: Cargo.toml
rust/message_layer/src/: application_layer.rs  lib.rs  message_header.rs
rust/project_messaging_application_message_layer/: Cargo.toml
rust/project_messaging_application_message_layer/src/: lib.rs  message_layer.rs
rust/project_messaging_application_server/: Cargo.toml
rust/project_messaging_application_server/src/: main.rs
rust/server/: Cargo.toml
rust/server/src/: main.rs  messaging_client.rs  shared_clients.rs
src/: Makefile
src/client/: Client.cpp
src/server/: MessagingClient.cpp  MessagingClient.hpp  Server.cpp  Server.hpp  SharedClients.cpp  SharedClients.hpp
src/shared/: CryptoLayer.hpp  MessageLayer.cpp  MessageLayer.hpp  MessageLayerTests.cpp
