# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "server"
version = "0.1.0"
edition = "2018"
description = "Toy Messaging Application Spawned from a 4th year course [Server]"

[dependencies]
message_layer = { path = "../message_layer"}
